# source-finding-problem

./: .gitattributes  .gitignore  README.md  cityair-transolver-solution.ipynb  pyproject.toml
TransolverPDE/model/: Transolver_Irregular_Mesh.py  Transolver_Structured_Mesh_2D.py  Transolver_Structured_Mesh_3D.py
experiments/: README.md  RESULTS.csv  RESULTS.md  aggregate.py  common.py  plots.py
experiments/exp_000_trivial/: run.py
experiments/exp_001_baseline/: README.md  predictions.csv  run_baseline.py  run_unified.py
experiments/exp_002_transolver/: config.json  history.json  metrics.json  predictions.csv  train_transolver.py
experiments/exp_003_transolver_heatmap_multitask/: config.json  history.json  metrics.json  predictions.csv  train.py
experiments/exp_004_transolver_regressor_multitask/: config.json  history.json  metrics.json  predictions.csv  train.py
experiments/exp_005_unet_baseline/: config.json  history.json  metrics.json  predictions.csv  train.py
experiments/exp_006_transolver_with_wind/: train.py
experiments/exp_007_pinn/: config.json  (+4 more)
models/: pinn.py  transolver_multitask.py  unet.py
presentation/: .latexmkrc  gen_metrics.py  metrics.tex  slides.aux  slides.fdb_latexmk  slides.fls  slides.nav  slides.out  slides.tex  slides.toc  slides.xdv
report/: .latexmkrc  metrics.tex  references.bib  report.tex
scripts/: fetch_data.sh  run_all.sh
tools/: augmentations.py  compare.py  dataset.py  demo_augment.py  demo_plots.py  device.py  gen_metrics.py  heatmap.py  losses.py  metrics.py  parse_data.py  splits.py  trainer.py  visualize.py
(+18 files in other folders)
